--- a/src/assets/styles/entry.scss
+++ b/src/assets/styles/entry.scss
@@ -1,5 +1,6 @@
 @import 'root.scss';
 @import 'font.scss';
+@import 'icon-aamc';
 @import 'base.scss';
 @import 'element.scss';
 @import 'layout.scss';
