--- a/src/assets/styles/root.scss
+++ b/src/assets/styles/root.scss
@@ -4,6 +4,7 @@
     --color-up: #26c48b;
     --main-color: #2a64fb;
     --hover-color: #448bf4;
+    --text-color-0: #000;
     --text-color-1: #111;
     --text-color-3: #333;
     --text-color-6: #666;
