--- a/src/assets/styles/icon-aamc.scss
+++ b/src/assets/styles/icon-aamc.scss
@@ -11,7 +11,7 @@
 
 [class^="icon-"],
 [class*=" icon-"] {
-    font-family: 'aamc' !important;
+    font-family: 'aamc', sans-serif !important;
     speak: never;
     font-style: normal;
     font-weight: normal;
