--- a/src/assets/styles/root.scss
+++ b/src/assets/styles/root.scss
@@ -22,4 +22,8 @@
         --el-pagination-button-height: 22px;
         --el-pagination-font-size: 14px;
     }
+
+    .el-dialog {
+        --el-border-radius-small: 12px;
+    }
 }
