--- a/src/assets/styles/icon-aamc.scss
+++ b/src/assets/styles/icon-aamc.scss
@@ -22,6 +22,10 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-time::before {
+    content: "\e908";
+}
+
 .icon-flame::before {
     content: "\e907";
 }
