--- a/src/assets/fonts/aamc/style.css
+++ b/src/assets/fonts/aamc/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'aamc';
   src:
-    url('fonts/aamc.ttf?2ywbu4') format('truetype'),
-    url('fonts/aamc.woff?2ywbu4') format('woff'),
-    url('fonts/aamc.svg?2ywbu4#aamc') format('svg');
+    url('fonts/aamc.ttf?vwg7v') format('truetype'),
+    url('fonts/aamc.woff?vwg7v') format('woff'),
+    url('fonts/aamc.svg?vwg7v#aamc') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-bottom:before {
+  content: "\e909";
+}
+.icon-arrow-top:before {
+  content: "\e90a";
+}
 .icon-time:before {
   content: "\e908";
 }
