--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -191,6 +191,11 @@
     border-radius: 4px;
     font-weight: bold;
     cursor: pointer;
+
+    &[disabled] {
+        background-color: var(--text-color-9);
+        cursor: not-allowed;
+    }
 }
 
 .btn-primary {
