--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -185,19 +185,6 @@
     border-radius: 4px;
 }
 
-// 按钮样式
-.btn-primary,
-.btn-info {
-    border-radius: 4px;
-    font-weight: bold;
-    cursor: pointer;
-
-    &[disabled] {
-        background-color: var(--text-color-9);
-        cursor: not-allowed;
-    }
-}
-
 .btn-primary {
     height: 46px;
     color: #fff;
@@ -211,4 +198,28 @@
     color: var(--text-color-0);
     background: rgba(102, 102, 102, 0.08);
     padding: 15px;
+}
+
+// 按钮样式
+.btn-primary,
+.btn-info {
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.3s all ease-in-out;
+
+    &.small {
+        padding: 0 12px;
+        height: 32px;
+        font-size: 12px;
+    }
+
+    &:hover {
+        opacity: 0.8;
+    }
+
+    &[disabled] {
+        background-color: var(--text-color-9);
+        cursor: not-allowed;
+    }
 }
