--- a/src/assets/styles/icon-aamc.scss
+++ b/src/assets/styles/icon-aamc.scss
@@ -22,6 +22,22 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-facebook::before {
+    content: "\e90b";
+}
+
+.icon-instagram::before {
+    content: "\e90c";
+}
+
+.icon-linkedin::before {
+    content: "\e90d";
+}
+
+.icon-twitter::before {
+    content: "\e90e";
+}
+
 .icon-arrow-bottom::before {
     content: "\e909";
 }
