--- a/src/assets/fonts/aamc/style.css
+++ b/src/assets/fonts/aamc/style.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'aamc';
   src:
-    url('fonts/aamc.ttf?vwg7v') format('truetype'),
-    url('fonts/aamc.woff?vwg7v') format('woff'),
-    url('fonts/aamc.svg?vwg7v#aamc') format('svg');
+    url('fonts/aamc.ttf?osg8p7') format('truetype'),
+    url('fonts/aamc.woff?osg8p7') format('woff'),
+    url('fonts/aamc.svg?osg8p7#aamc') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -24,6 +24,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-facebook:before {
+  content: "\e90b";
+}
+.icon-instagram:before {
+  content: "\e90c";
+}
+.icon-linkedin:before {
+  content: "\e90d";
+}
+.icon-twitter:before {
+  content: "\e90e";
+}
 .icon-arrow-bottom:before {
   content: "\e909";
 }
