--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -169,6 +169,10 @@
     text-transform: uppercase;
 }
 
+.text-capitalize {
+    text-transform: capitalize;
+}
+
 .color-up {
     color: var(--color-up);
 }
