--- a/src/assets/styles/element.scss
+++ b/src/assets/styles/element.scss
@@ -61,7 +61,10 @@
             white-space: nowrap;
             line-height: 22px;
             font-weight: bold;
-            display: inline-flex;
+
+            a {
+                vertical-align: middle;
+            }
 
             .color-middle {
                 color: var(--text-color-6);
@@ -80,18 +83,6 @@
 
         .el-empty__bottom {
             line-height: 1;
-        }
-
-        .el-loading-spinner {
-            circle {
-                stroke-width: 6;
-            }
-
-            .el-loading-text {
-                margin-top: 20px;
-                color: var(--main-color);
-                font-weight: bold;
-            }
         }
 
         &.el-loading-parent--relative {
@@ -209,27 +200,6 @@
         padding: 0;
     }
 
-    // 全屏样式
-    &.reset-fullscreen {
-        border-radius: 0;
-        display: flex;
-        flex-flow: column;
-
-        .el-dialog__header {
-            padding-top: 0;
-        }
-
-        .el-dialog__headerbtn {
-            top: 11px;
-            right: 20px;
-        }
-
-        .el-dialog__body {
-            flex: 1;
-            overflow: hidden scroll;
-        }
-    }
-
     @media screen and (max-width: 700px) {
         width: 90% !important;
     }
@@ -279,5 +249,19 @@
     .el-tabs__nav-wrap::after {
         height: 1px;
         background-color: rgba(0, 0, 0, 0.05);
+    }
+}
+
+// 覆盖全局loading
+.el-loading-mask {
+    .el-loading-spinner {
+        .path {
+            stroke-width: 6;
+        }
+
+        .el-loading-text {
+            margin-top: 20px;
+            font-weight: bold;
+        }
     }
 }
