--- a/src/assets/styles/icon-aamc.scss
+++ b/src/assets/styles/icon-aamc.scss
@@ -22,6 +22,10 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-telegram::before {
+    content: "\e90f";
+}
+
 .icon-facebook::before {
     content: "\e90b";
 }
