--- a/src/assets/styles/element.scss
+++ b/src/assets/styles/element.scss
@@ -85,7 +85,7 @@
             line-height: 1;
         }
 
-        &.el-loading-parent--relative {
+        &.is-loading {
             .el-table__empty-text {
                 opacity: 0;
             }
